@@ -1,0 +1,5 @@
+<?php
+class testRuleNotAppliesForLongPrivateStaticProperty
+{
+    private static $testRuleNotAppliesForLongPrivateStaticProperty = 23;
+}
