@@ -1,0 +1,5 @@
+<?php
+class testRuleNotAppliesForLongPrivateProperty
+{
+    private $testRuleNotAppliesForLongPrivateProperty = 42;
+}
