@@ -3,6 +3,8 @@ phpmd-1.1.0 (2011/03/  )
 
 - Implemented #10474873: Add rule for PHP's goto statement. Implemented
   with commit #2745a20.
+- Fixed #10096717: LongVariable rule should not apply on private
+  properties. Fixed with commit #.
 
 phpmd-1.0.1 (2011/02/12)
 ========================
